[package]
name = "advent23"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.12.0"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
nom = "7.1.1"
num = "0.4.0"
petgraph = "0.6.2"
rand = "0.8.5"
rayon = "1.6.0"
regex = "1.7.0"
colored = "2.0.0"
indicatif = { version = "0.17.2", features = ["rayon"] }
itertools = "0.10.5"
lazy_static = { version = "1.4.0", features = [] }
chrono = "0.4.31"
